--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm i"
   },
   "author": "",
   "license": "ISC",
