--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i"
+    "build": "npm i"
   },
   "author": "",
   "license": "ISC",
